third_party/move/move-compiler/tests/move_check/parser/invalid_call_lhs_complex_expression.exp
error[E02004]: invalid 'module' declaration
  ┌─ tests/move_check/parser/invalid_call_lhs_complex_expression.move:1:8
  │
1 │ module M {
  │        ^ Invalid module declaration. The module does not have a specified address. Either declare it inside of an 'address <address> {' block or declare it with an address 'module <address>::M''

error[E01013]: unsupported language construct
  ┌─ tests/move_check/parser/invalid_call_lhs_complex_expression.move:3:9
  │
3 │         (if (true) 5 else 0)();
  │         ^^^^^^^^^^^^^^^^^^^^ Calls through computed functions not supported by this compiler

error[E01013]: unsupported language construct
  ┌─ tests/move_check/parser/invalid_call_lhs_complex_expression.move:4:9
  │
4 │         (while (false) {})(0, 1);
  │         ^^^^^^^^^^^^^^^^^^ Calls through computed functions not supported by this compiler

